--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-firestore.js"></script> 
 
-     <link rel="shortcut icon" type="image/jpg" href="Yash.png"/>
+     <link href="Yash.png" rel="shortcut icon" type="image/jpg">
 
 <title>Firebase Linked App</title>
 <link rel="stylesheet" href="style.css">
